--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,21 +1,23 @@
-* { /*Colocar tags e tirar "*" */
+* { 
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;  
   text-decoration: none;    
 }
-
 html, body {
+  font-size: 62.5%;
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
 }
-
-ul, ol, li, a {
+ul, ol, li {
   list-style: none;
   cursor: pointer;
 }
-
+a {
+  outline: none;
+  cursor: pointer;
+}
 input {
   border:none;
   background-image:none;
@@ -31,15 +33,12 @@ input[type=number],
 input[type=text]   {
   outline:none;
 } 
-
 input::placeholder {
   text-transform: none;
 }
-
 input[type=email] {
   text-transform: none; 
 }
-
 button,
 select {
   background: none;
@@ -51,7 +50,6 @@ select {
   padding: 0;
   cursor: pointer;
 }
-
 a {
   cursor: pointer;
 }
